# helloworld_cli

./: CMakeLists.txt  README.md  helloworld_cli.sln  helloworld_cli.vcxproj  main.cpp
.github/workflows/: cmake.yml  main.yml
